# vela-coding-assignment

./: README.md
api/: README.md  SOLUTION.md  pyproject.toml
api/src/: manage.py
api/src/vela/: asgi.py  settings.py  urls.py  wsgi.py
api/src/vela/templates/: swagger.html
api/src/vela/todolist/: apps.py  models.py  serializers.py  views.py
api/src/vela/todolist/migrations/: 0001_initial.py  0002_todoitem_assigned_users.py
api/src/vela/todolist/tests/: test_views.py
ui/: .eslintrc.json  .gitignore  SOLUTION.md  jest.config.js  package.json
ui/src/: App.js  index.html  index.js  types.js
ui/src/DisplayUsers/: UserTable.js  UserTable.module.css  index.js
ui/src/api/: index.js  index.test.js
